# goph547-w2026-lab00-stSP

./: .gitignore  README.md  pyproject.toml
examples/: driver.py
src/goph547lab00/: arrays.py
